src/components/NavigationBar.css
.tab-list-wrapper {
  background-color: var(--nav-button-color);
  height: var(--nav-tabs-height);
}

.tab-list {
  display: flex;
  justify-content: center;
  align-items: center;
  height: var(--nav-tabs-height);
  overflow: hidden;
  max-width: 400px;
  margin: auto;
}

.tab-list > div {
  display: flex;
  justify-content: space-around;
  width: 100%;
}

.tab-list button {
  padding: 0.5em;
  border: none;
  cursor: pointer;
  width: 100%;
  max-height: 64px;
  aspect-ratio: 1;
  background-color: var(--nav-button-color);
}

.tab-list button:hover {
  background-color: var(--nav-button-hover-color);
}

